# STXOffset

./: Cargo.toml
STEP/: 505.STX  736.STX
src/: main.rs
